--- a/Fastcampus/NewsList/app/src/main/res/values/strings.xml
+++ b/Fastcampus/NewsList/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">NewsList</string>
+    <string name="app_name">뉴스 리스트</string>
+    <string name="chip_feed">피드</string>
+    <string name="chip_economics">경제</string>
+    <string name="chip_politics">정치</string>
+    <string name="chip_society">사회</string>">
+    <string name="chip_it">정보기술</string>
+    <string name="chip_sports">스포츠</string>
 </resources>
