--- a/Fastcampus/Chatting/app/src/main/res/values/strings.xml
+++ b/Fastcampus/Chatting/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">채팅앱</string>
+    <string name="default_notification_channel_id">default_notification_channel_id</string>
+    <string name="channel_name">채팅 알림</string>
+    <string name="channel_description">채팅 알림입니다.</string>
 </resources>
