--- a/Fastcampus/OrderPage/app/src/main/res/values/strings.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">별다방 커피</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">home</string>
     <string name="order">order</string>
     <string name="appbar_title_text">%s님,\n 오늘도 커피 한잔 어떠세요?</string>
     <string name="imageview_desc">이미지</string>
     <string name="appbar_star_title">%d/%d</string>
+    <string name="recommend_title">%s님을 위한 추천 메뉴</string>
+    <string name="foodmenu_title">함께 하면 좋은 디저트</string>
 </resources>
