--- a/Fastcampus/OrderPage/app/src/main/res/values/strings.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="appbar_star_title">%d/%d</string>
     <string name="recommend_title">%s님을 위한 추천 메뉴</string>
     <string name="foodmenu_title">함께 하면 좋은 디저트</string>
+    <string name="home_delivery">Delivery</string>
 </resources>
